# signwriting-animation

./: .gitignore  README.md  dataloader.ipynb  pyproject.toml  thesis_dataloader.ipynb
.github/workflows/: lint.yaml  test.yaml
signwriting_animation/: bin.py
signwriting_animation/data/: collect_pose.py  data_loader.py  prepare_data.py  prepare_embeddings.py  segment_poses.py
signwriting_animation/data/test_data/pose_samples/: dictio-czj-3debf210b4a99ac12155e654c3aeb51a.pose  whatsthatsign-524.pose
signwriting_animation/data/test_data/transcription_samples/: data_subset.csv
signwriting_animation/diffusion/: README.md  download_data.sh  lightning_module.py
signwriting_animation/diffusion/core/: distribution.py  models.py
signwriting_animation/diffusion/prepare_data/: prepare_data.py
signwriting_animation/diffusion/tests/: conftest.py  test_dataset.py  test_length_prediction.py  test_models.py  test_overfitting  test_overfitting.py  test_smoke.py
signwriting_animation/scripts/: minimal_loop.py
signwriting_animation/translation/: README.md  codes_to_poses.sh  poses_to_codes.sh  train_sockeye_model.sh  translate.py  utils.py
signwriting_animation/translation/fine_tuning/: create_parallel_data.py
signwriting_animation/translation/pretraining/: create_pretraining_data.py  create_vocab_files.py  graph_ppl.py
